@@ -173,6 +173,8 @@ documents those changes that are of interest to users and administrators.
     unset.
  -- openapi/dbv0.0.38 - correct issue where 16 & 32 bit integers were not able
     to be unset.
+ -- Add new SlurmctldParameters=validate_nodeaddr_threads=<number> option to
+    allow concurrent hostname resolution at slurmctld startup.
 
 * Changes in Slurm 22.05.6
 ==========================
